Данные в шаблон передаю из функции

--- a/02_IntroductionToDjango/board/advertisements/templates/advertisement/excel-gsheets.html
+++ b/02_IntroductionToDjango/board/advertisements/templates/advertisement/excel-gsheets.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>excel-gsheets</title>
+    <title>{{ title }}</title>
 </head>
 <body>
-<img src="https://248006.selcdn.ru/LandGen/desktop_2_b609db3df74c3b33f9819476d65eef1ed431af6f.webp" width="150" height="150" alt="">
+<img src={{ img_url }} width="150" height="150" alt="">
 <br>
-<a href="https://skillbox.ru/course/excel-gsheets/">Excel + Google Таблицы с нуля до PRO</a>
+<a href={{ link_to_the_course }}>{{ course_name }}</a>
 <br>
-<p>Стоимость 31 597 ₽</p>
+<p>Стоимость {{ price }} ₽</p>
 </body>
 </html>
