--- a/02_IntroductionToDjango/board/advertisements/templates/advertisement/web-design-3.html
+++ b/02_IntroductionToDjango/board/advertisements/templates/advertisement/web-design-3.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>web-design-3</title>
+    <title>{{ title }}</title>
 </head>
 <body>
-<img src="https://248006.selcdn.ru/LandGen/desktop_2_262ebbb0b9720b2314fe4d9ce45cc3609e942716.webp" width="150" height="150" alt="">
+<img src={{ img_url }} width="150" height="150" alt="">
 <br>
-<a href="https://skillbox.ru/course/web-design-3/">Веб-дизайн 3.0</a>
+<a href={{ link_to_the_course }}>{{ course_name }}</a>
 <br>
-<p>Стоимость 102 960 ₽</p>
+<p>Стоимость {{ price }} ₽</p>
 </body>
 </html>
