--- a/02_IntroductionToDjango/board/advertisements/templates/advertisement/advertisement_list.html
+++ b/02_IntroductionToDjango/board/advertisements/templates/advertisement/advertisement_list.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>advertisement_list</title>
+    <title>{{ title }}</title>
 </head>
 <body>
 <h1>Прошел все курсы на SkillBox. Продаю готовые домашние задания</h1>
+
 <ul>
-    <li><a href="{%  url 'devops' %}">Старт в DevOps: системное администрирование для начинающих</a></li>
-    <li><a href="{% url 'web-design-3' %}">Веб-дизайн 3.0</a></li>
-    <li><a href="{% url 'restaurant-manager' %}">Управляющий рестораном</a></li>
-    <li><a href="{% url 'excel-gsheets' %}">Excel + Google Таблицы с нуля до PRO</a></li>
-    <li><a href="{% url 'music-manager' %}">Музыкальный менеджер</a></li>
+    {% for course in course_pages %}
+    <li><a href="{% url course.url_name %}">{{ course.title }}</a></li>
+    {% endfor %}
 </ul>
+
 </body>
 </html>
