--- a/02_IntroductionToDjango/board/advertisements/templates/advertisement/devops.html
+++ b/02_IntroductionToDjango/board/advertisements/templates/advertisement/devops.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>devops</title>
+    <title>{{ title }}</title>
 </head>
 <body>
-<img src="https://248006.selcdn.ru/LandGen/desktop_2_bd5c75285fc4a318ae23886b16f51b2b110ea1b1.webp" width="150" height="150" alt="">
+<img src={{ img_url }} width="150" height="150" alt="">
 <br>
-<a href="https://skillbox.ru/course/devops/">Старт в DevOps</a>
+<a href={{ link_to_the_course }}>{{ course_name }}</a>
 <br>
-<p>Стоимость 4 514 ₽</p>
+<p>Стоимость {{ price }} ₽</p>
 </body>
 </html>
