--- a/02_IntroductionToDjango/board/advertisements/templates/advertisement/music-manager.html
+++ b/02_IntroductionToDjango/board/advertisements/templates/advertisement/music-manager.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>music-manager</title>
+    <title>{{ title }}</title>
 </head>
 <body>
-<img src="https://248006.selcdn.ru/LandGen/desktop_2_4280e43b6ab85f950b81ec1f4be9d2170943f145.webp" width="150" height="150" alt="">
+<img src={{ img_url }} width="150" height="150" alt="">
 <br>
-<a href="https://skillbox.ru/course/music-manager/">Музыкальный менеджер</a>
+<a href={{ link_to_the_course }}>{{ course_name }}</a>
 <br>
-<p>Стоимость 5 382 ₽</p>
+<p>Стоимость {{ price }} ₽</p>
 </body>
 </html>
