--- a/02_IntroductionToDjango/board/advertisements/templates/advertisement/restaurant-manager.html
+++ b/02_IntroductionToDjango/board/advertisements/templates/advertisement/restaurant-manager.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>restaurant-manager</title>
+    <title>{{ title }}</title>
 </head>
 <body>
-<img src="https://248006.selcdn.ru/LandGen/desktop_2_70fe1c9221c549f772e76482718b4c3d663dcfe6.webp" width="150" height="150" alt="">
+<img src={{ img_url }} width="150" height="150" alt="">
 <br>
-<a href="https://skillbox.ru/course/restaurant-manager/">Управляющий рестораном</a>
+<a href={{ link_to_the_course }}>{{ course_name }}</a>
 <br>
-<p>Стоимость 68 345 ₽</p>
+<p>Стоимость {{ price }} ₽</p>
 </body>
 </html>
