--- a/02_IntroductionToDjango/board/advertisements/templates/advertisement/contacts.html
+++ b/02_IntroductionToDjango/board/advertisements/templates/advertisement/contacts.html
@@ -11,11 +11,8 @@
     <li><a href="{% url m.url_name %}">{{ m.title }}</a></li>
     {% endfor %}
 </ul>
-
-<img src={{ context.img_url }} width="150" height="150" alt="">
-<br>
-<a href={{ context.link_to_the_course }}>{{ context.course_name }}</a>
-<br>
-<p>Стоимость {{ context.price }} ₽</p>
+    <h1>Наши контакты</h1>
+    <p>Телефон - {{ context.phone }}</p>
+    <p>email - {{ context.email }}</p>
 </body>
 </html>
