--- a/02_IntroductionToDjango/board/advertisements/templates/advertisement/web-design-3.html
+++ b/02_IntroductionToDjango/board/advertisements/templates/advertisement/web-design-3.html
@@ -2,13 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{{ title }}</title>
+    <title>{{ context.title }}</title>
 </head>
 <body>
-<img src={{ img_url }} width="150" height="150" alt="">
+<h1>МЕНЮ</h1>
+<ul>
+    {% for m in menu %}
+    <li><a href="{% url m.url_name %}">{{ m.title }}</a></li>
+    {% endfor %}
+</ul>
+
+<img src={{ context.img_url }} width="150" height="150" alt="">
 <br>
-<a href={{ link_to_the_course }}>{{ course_name }}</a>
+<a href={{ context.link_to_the_course }}>{{ context.course_name }}</a>
 <br>
-<p>Стоимость {{ price }} ₽</p>
+<p>Стоимость {{ context.price }} ₽</p>
 </body>
 </html>
