Добавил счетчик запросов

--- a/03_RequestsHandlingInDjango/board/advertisements/templates/advertisements/advertisement_list.html
+++ b/03_RequestsHandlingInDjango/board/advertisements/templates/advertisements/advertisement_list.html
@@ -4,4 +4,5 @@
     <li>Выведение из запоя</li>
     <li>Услуги экскаватора-погрузчика, гидромолота, ямобура</li>
 </ul>
+<p>Количсетво запросов: {{ request.request_counter }}</p>
 </html>
