--- a/03_RequestsHandlingInDjango/board/advertisements/templates/advertisements/advertisements.html
+++ b/03_RequestsHandlingInDjango/board/advertisements/templates/advertisements/advertisements.html
@@ -28,5 +28,6 @@
 {% if key%}
 <h2>Создание новой записи успешно выполнено</h2>
 {% endif %}
+<p>Количсетво запросов: {{ request.request_counter }}</p>
 </body>
 </html>
