--- a/03_RequestsHandlingInDjango/board/advertisements/templates/advertisements/contacts.html
+++ b/03_RequestsHandlingInDjango/board/advertisements/templates/advertisements/contacts.html
@@ -15,5 +15,6 @@
 <h1>Наши контакты</h1>
 <p>Телефон - {{ phone }}</p>
 <p>email - {{ email }}</p>
+<p>Количсетво запросов: {{ request.request_counter }}</p>
 </body>
 </html>
